# STM32_HID_BL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  readme.md
CMake/: STM32F4xx_HAL_Driver.cmake  gcc-arm-none-eabi.cmake
Core/STM32F4/: CMakeLists.txt
Core/STM32F4/Inc/: usb_device.h  usbd_conf.h
Core/STM32F4/Src/: flash_wrapper.cpp  rtc_wrapper.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  usb_device.c  usb_wrapper.c  usbd_conf.c  usbd_custom_hid_if.c  usbd_desc.c
Core/STM32H7/: CMakeLists.txt
Core/STM32H7/Inc/: stm32h7xx_hal_conf.h  usb_device.h  usbd_conf.h  usbd_custom_hid_if.h
Core/STM32H7/Src/: flash_wrapper.cpp  rtc_wrapper.cpp  sd_wrapper.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c  usb_device.c  usb_wrapper.c  usbd_conf.c  usbd_custom_hid_if.c  usbd_desc.c
Core/STM32H7/Src/FatFs/: diskio.h  ffconf.h  user_diskio_spi.c
Core/Wrapper/: CMakeLists.txt
Core/Wrapper/Inc/: flash_wrapper.h  rtc_wrapper.h  sd_wrapper.h  usb_wrapper.h
Inc/: flash.h  main.h  stm32f4xx_hal_conf.h
Scripts/: build_all.py  prep_sd_file.py
Src/: main.c  main.cpp  stm32f4xx_hal_msp.c  variantChecks.cpp
Variants/F401CEUX/: CMakeLists.txt  ldscript.ld  variant.cpp  variant.h
Variants/F407VETX/: CMakeLists.txt  ldscript.ld  variant.cpp  variant.h
Variants/F446VETX/: CMakeLists.txt  ldscript.ld  variant.c  variant.cpp  variant.h
Variants/H723ZGTX/: CMakeLists.txt  ldscript.ld  variant.cpp  variant.h
